--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/pink"
     android:orientation="vertical"
-    tools:context=".activities.LoginActivity">
+    tools:context=".activities.LoginRegisterActivity">
 
     <RelativeLayout
         android:id="@+id/ll_login"
